@@ -47,6 +47,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix rpmbuild issue with rpm 4.13+ / Fedora 25+.
  -- sacct - fix the display for the NNodes field when using the --units option.
  -- Prevent possible double-xfree on a buffer in stepd_completion.
+ -- Fix for record job state on successful allocation but failed reply message.
 
 * Changes in Slurm 17.11.0
 ==========================
